--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -546,7 +546,7 @@
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
               data-src="https://coronamex.github.io/imagenes/sir_nacional_centinela.png"
               data-srcset="https://coronamex.github.io/imagenes/sir_nacional_centinela.png 1x, https://coronamex.github.io/imagenes/sir_nacional_centinela@2x.png 2x"
-              alt="Casos nacionales acumulados estimados de COVID-19 en México con datos del sistema de vigilancia epidemiológica centinela. La gráfica muestra los estimados oficiales más recientes de la SSA que se publican una vez por semana y con dos semanas de retraso. La gráfica también muestra los estimados correspondientes de CoronaMex que se actualizan diariamente con la base de datos abiertos de la Secretaría de Salud."
+              alt="Casos nacionales acumulados estimados de COVID-19 en México con datos del sistema de vigilancia epidemiológica Centinela. La gráfica muestra los estimados oficiales más recientes de la SSA que se publican una vez por semana y con dos semanas de retraso. La gráfica también muestra los estimados correspondientes de CoronaMex que se actualizan diariamente con la base de datos abiertos de la Secretaría de Salud."
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
@@ -554,7 +554,7 @@
             <p class="lead">
               <p>El número real de casos de COVID-19 es un parámetro esencial para determinar el riesgo de contagio de cada persona. El sistema Centinela es similar a una encuesta y permite estimar el número de casos reales aún sin diagnosticar a todos los contagiados. Desafortunadamente, sólo tenemos estimados oficiales hasta <a href="https://youtu.be/c-_kVkBFipw?t=3052" target="_blank"> la semana epidemiológica 15 (10 de abril)</a>. Como la epidemia sigue creciendo, el número de casos actual debe ser mayor.</p>
 <p>La Secretaría de Salud (SSA) no publica todos los elementos necesarios para reproducir sus estimados, así que hago algunas simplificaciones y llego a un resultado similar. Esto nos permite producir estimados en fechas más recientes.</p>
-<p>Finalmente, podemos combinar los números del sistema Centinela con un <a href="../../casos#sir">modelo SEIR</a> para corregir por el <a href="../../clinicos#tiempo_deteccion">retraso</a> en la detección de casos y estimar el número de real casos el día de hoy. Como los números de la SSA son más antiguos, las proyecciones basados en estos números son menos confiables. Todos los valores en esta gráfica se calculan <a href="https://github.com/coronamex/visualizando/blob/master/casos/centinela_preliminar.r" target="_blank">con este código</a>, y los valores numéricos se pueden <a href="https://raw.githubusercontent.com/coronamex/visualizando/master/estimados/centinela_seir_estimados.csv" target="blank">descargar</a>.</p>
+<p>Finalmente, podemos combinar los números del sistema Centinela con un <a href="../../casos#sir">modelo SEIR</a> estimar mayor claridad el número de casos el día de hoy. El código para las estimaciones está <a href="https://github.com/coronamex/visualizando/tree/master/casos" target="_blank">aquío</a>, y los estimados están <a href="https://github.com/coronamex/visualizando/tree/master/estimados" target="blank">aquí</a>.</p>
 <p>Esta gráfica se actualiza unas horas después que el resto del sitio.</p>
             </p>
               
