--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -486,6 +486,30 @@
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="muertes_tipomun">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/muertes_nacionales_tipo_mun.png"
+              data-srcset="https://coronamex.github.io/imagenes/muertes_nacionales_tipo_mun.png 1x, https://coronamex.github.io/imagenes/muertes_nacionales_tipo_mun@2x.png 2x"
+              alt=""
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>La epidemia se mueve al interior del país</h3>
+            <p class="lead">
+              <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el Valle de México, las otras zonas metropolitanas del país y los municipios no metropolitanos. Aunque los fallecimientos siguen acelerándose a nivel nacional, su distribución geográfica ha cambiado con el tiempo.</p>
+<p>Al inicio de la epidemia, el Valle de México acumuló la mayor cantidad de fallecimientos, pero éstos se han estabilizado (al igual que los <a href="../../municipios#vm_casos">casos</a>) desde mediados de mayo. Ahora vemos que los fallecimientos (y los casos) siguen acelerándose en otras zonas metropolitanas.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="muertes_region">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
