--- a/index.html
+++ b/index.html
@@ -376,24 +376,23 @@
       </div>
     </section>
   
-    <section class="section rad-animation-group pb-0" id="muertes_region">
+    <section class="section rad-animation-group pb-0" id="muertes_tipomun">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
           <div class="about__profile-picture col-12 col-md-6">
             <img
               class="lozad img-responsive image-right-overflow"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/muertes_region.png"
-              data-srcset="https://coronamex.github.io/imagenes/muertes_region.png 1x, https://coronamex.github.io/imagenes/muertes_region@2x.png 2x"
-              alt="Muertes confirmadas por COVID-19 por fecha de defunción por región de México."
+              data-src="https://coronamex.github.io/imagenes/muertes_nacionales_tipo_mun.png"
+              data-srcset="https://coronamex.github.io/imagenes/muertes_nacionales_tipo_mun.png 1x, https://coronamex.github.io/imagenes/muertes_nacionales_tipo_mun@2x.png 2x"
+              alt=""
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>Muertes confirmadas en México</h3>
+            <h3>La epidemia se mueve al interior del país</h3>
             <p class="lead">
-              <p>Esta gráfica muestra el número de defunciones confirmadas por COVID-19 en cada una de las ocho <a href="https://es.wikipedia.org/wiki/Anexo:Zonas_económicas_de_México" target="_blank">regiones geográficas</a> del país.</p>
-<p>Los fallecimientos se han distribuido a lo largo del país, pero las regiones Centrosur, Noroeste y Suroeste han sido las más golpeadas. Al igual que con los <a href="./casos#nacional_sintomas">casos</a>, hay un <a href="./clinicos#tiempo_deteccion">retraso</a> en la detección de fallecimientos así que es probable que los números en los días recientes aumenten.</p>
-<p>El costo en vidas de la pandemia no se limita a las muertes directamente causadas por el virus. Personas que no tienen COVID-19 pueden fallecer porque la saturación de los sistemas de salud no permite que sean atendidas, o porque se ven obligadas a estar encerradas con sus abusadores. Análisis en otros países sugieren que la pandemia podría ser responsable directa o indirectamente de <a href="https://www.ft.com/content/6bd88b7d-3386-4543-b2e9-0d5c6fac846c" target="_blank">60% más fallecimientos que los reportados</a>. En México, no sabemos la mortalidad total causada por la pandemia.</p>
+              <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el Valle de México, las otras zonas metropolitanas del país y los municipios no metropolitanos. Aunque los fallecimientos siguen acelerándose a nivel nacional, su distribución geográfica ha cambiado con el tiempo.</p>
+<p>Al inicio de la epidemia, el Valle de México acumuló la mayor cantidad de fallecimientos, pero éstos se han estabilizado (al igual que los <a href="./municipios#vm_casos">casos</a>) desde mediados de mayo. Ahora vemos que los fallecimientos (y los casos) siguen acelerándose en otras zonas metropolitanas.</p>
             </p>
               
           </div>
