--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -477,7 +477,7 @@
             <h3>Casos confirmados en México</h3>
             <p class="lead">
               <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p>
-<p>Debido a que hay un <a href="../../clinicos#tiempo_deteccion">retraso típico de 10 días</a> entre el tiempo que una persona contagiada de COVID-19 muestra síntomas y su caso es confirmado, los casos que se reportan hoy corresponden a contagios ocurridos días atrás (hasta dos semanas). Por lo tanto, no tenemos el número real de infecciones en los días más recientes.</p>
+<p>Debido a que hay un <a href="../../clinicos#tiempo_deteccion">retraso típico de 11 días</a> entre el tiempo que una persona contagiada de COVID-19 muestra síntomas y su caso es confirmado, los casos que se reportan hoy corresponden a contagios ocurridos días atrás (hasta dos semanas). Por lo tanto, no tenemos el número real de infecciones en los días más recientes.</p>
 <p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="../../casos#sir">estimar</a> el número de casos en la actualidad y el <a href="../../casos#sir_centinela">sistema Centinela</a> para estimar el número de casos reales.</p>
             </p>
               
@@ -501,8 +501,8 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>La epidemia se mueve al interior del país</h3>
             <p class="lead">
-              <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el Valle de México, las otras zonas metropolitanas del país y los municipios no metropolitanos. Aunque los fallecimientos siguen acelerándose a nivel nacional, su distribución geográfica ha cambiado con el tiempo.</p>
-<p>Al inicio de la epidemia, el Valle de México acumuló la mayor cantidad de fallecimientos, pero éstos se han estabilizado (al igual que los <a href="../../municipios#vm_casos">casos</a>) desde mediados de mayo. Ahora vemos que los fallecimientos (y los casos) siguen acelerándose en otras zonas metropolitanas.</p>
+              <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el <a href="../../municipios#vm_casos">Valle de México</a>, <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a> del país y los municipios no metropolitanos. Aunque los fallecimientos siguen acelerándose a nivel nacional, su distribución geográfica ha cambiado con el tiempo.</p>
+<p>Al inicio de la epidemia, el Valle de México acumuló la mayor cantidad de fallecimientos, pero éstos se han estabilizado (al igual que los <a href="../../municipios#vm_casos">casos</a>) desde mediados de mayo. Ahora vemos que los fallecimientos (y los casos) siguen acelerándose en <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a>.</p>
             </p>
               
           </div>
