--- a/muertes/muertes_tipomun/index.html
+++ b/muertes/muertes_tipomun/index.html
@@ -327,8 +327,8 @@
         <div class="col-12 col-md-6 my-auto my-auto">
           <h2>La epidemia se mueve al interior del país</h2>
           <p class="lead">
-            <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el Valle de México, las otras zonas metropolitanas del país y los municipios no metropolitanos. Aunque los fallecimientos siguen acelerándose a nivel nacional, su distribución geográfica ha cambiado con el tiempo.</p>
-<p>Al inicio de la epidemia, el Valle de México acumuló la mayor cantidad de fallecimientos, pero éstos se han estabilizado (al igual que los <a href="../../municipios#vm_casos">casos</a>) desde mediados de mayo. Ahora vemos que los fallecimientos (y los casos) siguen acelerándose en otras zonas metropolitanas.</p>
+            <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el <a href="../../municipios#vm_casos">Valle de México</a>, <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a> del país y los municipios no metropolitanos. Aunque los fallecimientos siguen acelerándose a nivel nacional, su distribución geográfica ha cambiado con el tiempo.</p>
+<p>Al inicio de la epidemia, el Valle de México acumuló la mayor cantidad de fallecimientos, pero éstos se han estabilizado (al igual que los <a href="../../municipios#vm_casos">casos</a>) desde mediados de mayo. Ahora vemos que los fallecimientos (y los casos) siguen acelerándose en <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a>.</p>
           </p>
             
         </div>
