--- a/municipios/top_zm_casos2/index.html
+++ b/municipios/top_zm_casos2/index.html
@@ -328,7 +328,7 @@
           <h2>Cada zona metropolitana tiene su propia epidemia (2/3)</h2>
           <p class="lead">
             <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha en nueve <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a>. donde la epidemia inició más lentamente que en <a href="../../municipios#top_zm_casos">otras ciudades</a> o que en el <a href="../../municipios#vm_casos">Valle de México</a>, pero esto no quiere decir que tengan menos casos. Esta ciudades llegaron a 500 casos acumulados el 16 de mayo, lo cual fue más rápido que en estas <a href="../../municipios#top_zm_casos3">otras ciudades</a>.</p>
-<p>La epidemia se ha comportado de diferentes maneras en estas ciudades. Juárez es la única donde los casos han disminuido por varias semanas, mientras que Cuernavaca y Querétaro muestran han mostrado una estabilización por varias semanas. En el resto de estas ciudades la epidemia sigue acelerándose.</p>
+<p>La epidemia se ha comportado de diferentes maneras en estas ciudades. Juárez es la única donde los casos han disminuido por varias semanas, mientras que Cuernavaca y Querétaro muestran han mostrado una estabilización por varias semanas. Otras ciudades dan buenas señales, pero es muy pronto para estar seguros.</p>
           </p>
             
         </div>
