--- a/municipios/top_zm_casos3/index.html
+++ b/municipios/top_zm_casos3/index.html
@@ -327,8 +327,8 @@
         <div class="col-12 col-md-6 my-auto my-auto">
           <h2>Cada zona metropolitana tiene su propia epidemia (3/3)</h2>
           <p class="lead">
-            <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha en nueve <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a>. donde la epidemia inició más lentamente que en <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">ciudades</a> o que en el <a href="../../municipios#vm_casos">Valle de México</a>, pero esto no quiere decir que tengan menos casos. Esta ciudades llegaron a 500 casos acumulados el 25 de mayo.</p>
-<p>Fuera de Coatzacoalcos que lleva varias semanas con un lento descenso en el número de casos nuevos, la mayoría de estas ciudades tiene una epidemia que inició después que en <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">ciudades</a> o que en el <a href="../../municipios#vm_casos">Valle de México</a>, y el número de casos en estas ciudades sigue acelerándose.</p>
+            <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha en nueve <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a>. donde la epidemia inició más lentamente que en <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">ciudades</a> o que en el <a href="../../municipios#vm_casos">Valle de México</a>, pero esto no quiere decir que tengan menos casos. Esta ciudades llegaron a 500 casos acumulados a más tardar el 25 de mayo.</p>
+<p>La epidemia es dispar en estas ciudades. Coatzacoalcos, Mazatlán, Pachuca y Tuxtla-Gutiérrez acumulan semanas con una disminución en el número de casos, Hermosillo podría seguir el mismo camino, mientras que La Laguna, León, San Luis Potosí y Tlaxcala-Apizaco siguen con una epidemia en crecimiento.</p>
           </p>
             
         </div>
