--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -415,6 +415,30 @@
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="casos_def_por_edad">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/casos_def_por_edad.png"
+              data-srcset="https://coronamex.github.io/imagenes/casos_def_por_edad.png 1x, https://coronamex.github.io/imagenes/casos_def_por_edad@2x.png 2x"
+              alt="Casos nuevos y fallecimientos por día de inicio de síntomas y grupo de edad en México"
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>Mayores de 60 años son más vulnerables</h3>
+            <p class="lead">
+              <p>Aunque todos estamos en riesgo, desde el inicio de la pandemia se detectó que las personas mayores de edad están en mayor riesgo. En México, cada diez años más de edad <a href="../../clinicos#riesgos_relativos">duplican </a> el riesgo relativo de fallecer por COVDI-19.</p>
+<p>Esta gráfica muestra el porcentaje de pacientes que mostraron síntomas o fallecieron para los diferentes grupos de edad de acuerdo a cuando mostraron síntomas. Aunque las personas de 50 años ó más sólo representan un tercio de los casos confirmados, representan más de tres cuartos de los fallecimientos.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="tiempo_deteccion">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
