--- a/estados/estados_casos4/index.html
+++ b/estados/estados_casos4/index.html
@@ -328,7 +328,7 @@
           <h2>Cada estado tiene su propia epidemia (4/4)</h2>
           <p class="lead">
             <p>Cada entidad federativa del país tiene características propias y una epidemia única. De hecho, la mayoría de las entidades se componen de varias epidemias más pequeñas, y algunas zonas metropolitanas cruzan las líneas estatales.</p>
-<p>Estas gráfica muestra el número de casos por día que mostraron síntomas. Los casos se asignan al estado donde los pacientes buscaron atención médica. Cada sección muestra ocho entidades, y las 32 entidades federativas están organizadas alfabéticamente. Sube o baja en la página para ver más entidades.</p>
+<p>Estas gráfica muestra el número de casos por día que mostraron síntomas, e indica cuáles entidades mostraban una tendencia a la alta hasta en los casos que mostraron síntomas hasta hace dos semanas. Cada sección muestra ocho entidades y las 32 entidades federativas están organizadas alfabéticamente. Sube o baja en la página para ver más entidades. También puedes ver la <a href="../../estados#r_efectiva"><i>R efectiva</i> de cada entidad</a>.</p>
           </p>
             
         </div>
