--- a/etiquetas/casos/index.html
+++ b/etiquetas/casos/index.html
@@ -328,15 +328,14 @@
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
               data-src="https://coronamex.github.io/imagenes/incremento_por_casos.png"
               data-srcset="https://coronamex.github.io/imagenes/incremento_por_casos.png 1x, https://coronamex.github.io/imagenes/incremento_por_casos@2x.png 2x"
-              alt="Crecimiento de la epidemia del COVID-19 en varios países. La gráfica muestra el crecimiento porcentual diario (promediado durante los siete días anteriores) en el número de casos como una función del número total de casos en cada país."
+              alt="Crecimiento de la epidemia del COVID-19 en varios países. La gráfica muestra el crecimiento porcentual diario (promediado durante los siete días anteriores) en el número de casos como una función del número total de casos por población en cada país."
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>La epidemia sigue creciendo en México</h3>
+            <h3>La epidemia no ha terminado en México</h3>
             <p class="lead">
-              <p>La velocidad con la que incrementan los casos es uno de los indicadores más importantes del estado de una epidemia porque nos permite estimar que tan cerca o lejos estamos del pico epidémico.</p>
-<p>Esta gráfica muestra el crecimiento porcentual diario en el número de casos (promediado en los 7 días anteriores), dado el número total de casos reportados hasta un momento determinado. Una línea horizontal indicaría un crecimiento exponencial.</p>
-<p>Aunque México nunca llegó a un crecimiento tan acelerado como en otros países, la gráfica muestra que la velocidad de crecimiento tampoco ha disminuido tanto como en otros países. Esto significa que aunque la curva se ha aplanado, todavía no logramos detener el crecimiento de la epidemia. Por eso es importante <strong>Quedarse en Casa Ya</strong>.</p>
+              <p>La velocidad con la que incrementan los casos es uno de los indicadores más importantes del estado de una epidemia. Esta gráfica muestra el aumento porcentual diario en el número de casos (promediado en los 7 días anteriores), dado el número de casos acumulados por cada 100 mil habitantes. Una línea horizontal indicaría un crecimiento exponencial, pero mientras el valor sea mayor a cero, sigue habiendo nuevos casos.</p>
+<p>La gráfica compara a México con los ocho países que tienen la mayor cantidad de casos <b>confirmados</b> por 100 mil habitantes hasta el día de hoy. Aunque México ha mantenido un crecimiento más lento que estos países, nuestra epidemia sigue creciendo. Además, la gráfica también muestra que en varios países la epidemia se ha desacelerado para luego volver a crecer, lo cual significa que no pueden relajar las medidas de Sana Distancia.</p>
             </p>
               
           </div>
@@ -353,13 +352,14 @@
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
               data-src="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.png"
               data-srcset="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.png 1x, https://coronamex.github.io/imagenes/casos_acumulados_por_dia@2x.png 2x"
-              alt="Curva epidemiológica. Muestra el número de casos acumulados de COVID-19 en varios países a partir del día en que se confirmó el caso 60 en cada país."
+              alt="Curva epidemiológica. Muestra el número de casos semanales por población de COVID-19 en varios países."
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>Casos acumulados</h3>
+            <h3>¿Dónde ha sido más intensa la epidemia?</h3>
             <p class="lead">
-              <p>Esta gráfica compara el avance de la  epidemia entre varios países a partir del día en que cada país detectó al caso 60.</p> <p>El eje verical de la gráfica está en escala logarítmica. Esto significa que si el crecimiento se ve como una línea recta, se trata en realidad de un aumento exponencial en el número de casos.</p>
+              <p>Es difícil comparar países porque cada uno tiene estrategias diferentes para monitorear y reportar la epidemia. Aún con estas dificultades, uno puede comparar el número de casos por población en una semana determinada. Este número refleja la probabilidad de contagiarse de COVID-19 en esa semana y ese país determinados, así que los lugares que alcanzan valores más altos, es dónde la población estuvo en mayor riesgo de contagio. Esta gráfica compara a México con los ocho países que han tenido el mayor número de casos <i>confirmados</i> por población y por semana.</p>
+<p>México está lejos de haber tenido un pico epidémico tan alto como en estos países. Sin embargo, esta gráfica puede ocultar diferencias regionales al promediar a países completos. Además, la fecha en que se confirma un caso es un indicador muy pobre del fenómeno epidémico, y para México es mejor usar la <a href="../../casos#nacional_sintomas">fecha de inicio de síntomas</a> que no está disponible en otros países.</p>
             </p>
               
           </div>
