--- a/mundo/casos/index.html
+++ b/mundo/casos/index.html
@@ -321,13 +321,14 @@
             src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
             data-src="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.png"
             data-srcset="https://coronamex.github.io/imagenes/casos_acumulados_por_dia.png 1x, https://coronamex.github.io/imagenes/casos_acumulados_por_dia@2x.png 2x"
-            alt="Curva epidemiológica. Muestra el número de casos acumulados de COVID-19 en varios países a partir del día en que se confirmó el caso 60 en cada país."
+            alt="Curva epidemiológica. Muestra el número de casos semanales por población de COVID-19 en varios países."
           />
         </div>
         <div class="col-12 col-md-6 my-auto my-auto">
-          <h2>Casos acumulados</h2>
+          <h2>¿Dónde ha sido más intensa la epidemia?</h2>
           <p class="lead">
-            <p>Esta gráfica compara el avance de la  epidemia entre varios países a partir del día en que cada país detectó al caso 60.</p> <p>El eje verical de la gráfica está en escala logarítmica. Esto significa que si el crecimiento se ve como una línea recta, se trata en realidad de un aumento exponencial en el número de casos.</p>
+            <p>Es difícil comparar países porque cada uno tiene estrategias diferentes para monitorear y reportar la epidemia. Aún con estas dificultades, uno puede comparar el número de casos por población en una semana determinada. Este número refleja la probabilidad de contagiarse de COVID-19 en esa semana y ese país determinados, así que los lugares que alcanzan valores más altos, es dónde la población estuvo en mayor riesgo de contagio. Esta gráfica compara a México con los ocho países que han tenido el mayor número de casos <i>confirmados</i> por población y por semana.</p>
+<p>México está lejos de haber tenido un pico epidémico tan alto como en estos países. Sin embargo, esta gráfica puede ocultar diferencias regionales al promediar a países completos. Además, la fecha en que se confirma un caso es un indicador muy pobre del fenómeno epidémico, y para México es mejor usar la <a href="../../casos#nacional_sintomas">fecha de inicio de síntomas</a> que no está disponible en otros países.</p>
           </p>
             
         </div>
