--- a/mundo/index.html
+++ b/mundo/index.html
@@ -332,9 +332,9 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>El mundo ya está en la tercera &#34;ola&#34;</h3>
+            <h3>La tercera &#34;ola&#34; repunta en el mundo</h3>
             <p class="lead">
-              <p>En México ha habido <a href="../muertes#muertes_tipomun">dos</a> <a href="../muertes#exceso_mortalidad_nacional">grandes</a> "olas" de mortalidad por COVID-19 en lo que va de la pandemia. Sin embargo, a nivel mundial nos encontramos en medio de la tercera. La primera "ola" mundial ocurrió entre abril y mayo de 2020, la segunda entre noviembre de 2020 y febrero de 2021. Durante esta segunda etapa llegamos a confirmar cerca de 15 mil defunciones por día debido a COVID-19. Desde mediados de marzo de 2021, han ocurrido un nuevo incremento acelerado en el número de defunciones globales, que ya está cerca de superar el máximo histórico, con Brasil e India como los países más afectados.</p>
+              <p>En México ha habido <a href="../muertes#muertes_tipomun">dos</a> <a href="../muertes#exceso_mortalidad_nacional">grandes</a> "olas" de mortalidad por COVID-19 en lo que va de la pandemia. Sin embargo, a nivel mundial nos encontramos en medio de la tercera. La primera "ola" mundial ocurrió entre abril y mayo de 2020, la segunda entre noviembre de 2020 y febrero de 2021. Durante esta segunda etapa llegamos a confirmar cerca de 15 mil defunciones por día debido a COVID-19. Desde mediados de marzo de 2021, han ocurrido un nuevo incremento acelerado en el número de defunciones globales con Brasil e India como los países más afectados, que parecía disminuir. Esta tercera "ola" parecía disminuir, pero ha repuntado en junio .</p>
 <p>La gráfica muestra el número de muertes (en una ventana deslizante de 7 días) en los 9 países con la mayor cantidad de muertes confirmadas por COVID-19, así como el resto del Mundo.</p>
             </p>
               
