--- a/clinicos/casos_def_por_edad/index.html
+++ b/clinicos/casos_def_por_edad/index.html
@@ -327,7 +327,7 @@
         <div class="col-12 col-md-6 my-auto my-auto">
           <h2>Mayores de 60 son vulnerables, la vacunación los protege</h2>
           <p class="lead">
-            <p>Aunque todos estamos en riesgo, desde el inicio de la pandemia se detectó que las personas mayores de edad están en mayor riesgo. En México, el riesgo relativo de fallecer por COVID-19 <a href="../../clinicos#riesgos_relativos">se duplica </a> con cada diez años más de edad.</p>
+            <p>Aunque todos estamos en riesgo, desde el inicio de la pandemia se detectó que las personas mayores de edad están en mayor riesgo. En México, el riesgo relativo de fallecer por COVID-19 <a href="../../clinicos#riesgos_relativos_prevac">se duplica </a> con cada diez años más de edad.</p>
 <p>A lo largo de la pandemia, cerca del 70% de los fallecimientos han ocurrido entre personas de 60 ó mas años, aunque sólo el 20% de los contagios, y el 11% de la población nacional, corresponde a este grupo.</p>
 <p>Afortunadamente, desde principios de abril hemos visto como se reduce la proporción de contagios y fallecimientos entre adultos mayores, lo cuál casi seguro <a href="../../clinicos#mortalidad_edad_tipomun">corresponde al programa de vacunación</a>. Aún falta muchas personas por vacunar, pero es importante que acudamos cuando sea nuestro turno.</p>
           </p>
