--- a/etiquetas/mortalidad/index.html
+++ b/etiquetas/mortalidad/index.html
@@ -319,6 +319,30 @@
   </section>
 
   
+    <section class="section rad-animation-group pb-0" id="rr_edad_mes">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/rr_edad_mes.png"
+              data-srcset="https://coronamex.github.io/imagenes/rr_edad_mes.png 1x, https://coronamex.github.io/rr_edad_mes@2x.png 2x"
+              alt="Gráfica muestra el cambio en el riesgo relativo (razón de momios) por grupo de edad a lo largo de varios meses de 2021. Calculado mediante un modelo logístico con un término monotónico para la edad y su interacción con el mes."
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>El riesgo disminuye en poblaciones vacunadas</h3>
+            <p class="lead">
+              <p>El COVID-19 es una enfermedad peligrosa <a href="../../clinicos#riesgos_relativos_prevac">para todos </a>, y por lo tanto debemos vacunarnos cuando sea nuestro. Sin embargo, como las personas mayores son más vulnerables, han sido prioridad durante la vacunación. En esta gráfica se aprecia que el riesgo relativo de fallecer por COVID-19 se ha reducido al menos a la mitad para la gente mayor desde el inicio de la vacunación, mientras que los grupos que se vacunaron después empiezan a mostrar reducciones también.</p>
+<p>No se deben confundir estas reducciones <a href = "https://espanol.cdc.gov/flu/vaccines-work/effectivenessqa.htm#differ" target="_blank">con la <i>efectividad</i> ni con la <i>eficacia</i></a> de las vacunas. La primera medida sólo se calcula en los ensayos clínicos, y la segunda no se puede calcular con la información disponible. Más bien, estos riesgos relativos representan promedios poblacionales <b>incluyendo</b> vacunados y no vacunados. Si quieres saber cómo se calculan estos números checa <a href="https://github.com/coronamex/visualizando/blob/master/clinicos/rr_monotonic.r" target="_blank">este código</a>.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="estados_100mil">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
