--- a/etiquetas/mortalidad/index.html
+++ b/etiquetas/mortalidad/index.html
@@ -327,7 +327,7 @@
               class="lozad img-responsive image-right-overflow"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
               data-src="https://coronamex.github.io/imagenes/rr_edad_mes.png"
-              data-srcset="https://coronamex.github.io/imagenes/rr_edad_mes.png 1x, https://coronamex.github.io/rr_edad_mes@2x.png 2x"
+              data-srcset="https://coronamex.github.io/imagenes/rr_edad_mes.png 1x, https://coronamex.github.io/imagenes/rr_edad_mes@2x.png 2x"
               alt="Gráfica muestra el cambio en el riesgo relativo (razón de momios) por grupo de edad a lo largo de varios meses de 2021. Calculado mediante un modelo logístico con un término monotónico para la edad y su interacción con el mes."
             />
           </div>
